// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ssr-hello-world build custom port should generate a production server running on custom port 1`] = `
SCRIPTS: Array [
  "http://localhost:4000/runtime-9b5f97582c0e6c4a5831.js",
  "http://localhost:4000/vendors~main-293de8fb778fafa23f06.js",
  "http://localhost:4000/main-f3a39034449721d83bde.js",
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
]
CSS: Array [
  "http://localhost:4000/main-fadb2269a374a06075a5.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' http://localhost:4000 https://some-cdn.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo">
        <div class="_3YtmnHj">
          Hello World
        </div>
        <img src="http://localhost:4000/a85d2645cc4d80a20b5ba78e8e797449.png">
      </div>
    </div>
    <script src="scripts[3]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr-hello-world build default port should generate a production server based on config 1`] = `
SCRIPTS: Array [
  "http://localhost:4000/runtime-9b5f97582c0e6c4a5831.js",
  "http://localhost:4000/vendors~main-293de8fb778fafa23f06.js",
  "http://localhost:4000/main-f3a39034449721d83bde.js",
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
]
CSS: Array [
  "http://localhost:4000/main-fadb2269a374a06075a5.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' http://localhost:4000 https://some-cdn.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo">
        <div class="_3YtmnHj">
          Hello World
        </div>
        <img src="http://localhost:4000/a85d2645cc4d80a20b5ba78e8e797449.png">
      </div>
    </div>
    <script src="scripts[3]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr-hello-world start should start a development server 1`] = `
SCRIPTS: Array [
  "http://localhost:8100/runtime.js",
  "http://localhost:8100/vendors~main.js",
  "http://localhost:8100/main.js",
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
]
CSS: Array [
  "http://localhost:8100/main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' http://localhost:8100 https://some-cdn.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="lessStyles__root___1brbpTo">
        <div class="lessStyles__nested___3YtmnHj">
          Hello World
        </div>
        <img src="http://localhost:8100/a85d2645cc4d80a20b5ba78e8e797449.png">
      </div>
    </div>
    <script src="scripts[3]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
